fdo#47440 import RTF_SHPBX/YPAGE for Writer pictures, too

Previously this was only handled for drawinglayer shapes.

Change-Id: I7ce440a27ebe44fc867b8a7f4ee62217076677f0